--- a/src/main/resources/kalenteri.fxml
+++ b/src/main/resources/kalenteri.fxml
@@ -1,59 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.KalenteriController" stylesheets="@TapahtumatStyles.css">
-    <children>
-        <Text layoutX="450.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kalenteri" textAlignment="CENTER" textOrigin="CENTER">
-            <font>
-                <Font size="27.0" />
-            </font>
-        </Text>
-        <Button fx:id="ProfiiliButton" contentDisplay="RIGHT" layoutX="680.0" layoutY="14.0" mnemonicParsing="false" onAction="#openProfiiliPage" prefHeight="25.0" prefWidth="90.0" styleClass="profiili-button" text="Profiili" AnchorPane.rightAnchor="152.0" AnchorPane.topAnchor="14.0" >
-            <font>
-                <Font size="14.0" />
-            </font>
-        </Button>
-        <Line endX="913.0" layoutX="105.0" layoutY="73.0" startX="-105.0" />
-        <Button fx:id="LogOutButton" contentDisplay="RIGHT" layoutX="905.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseProgram" prefHeight="25.0" prefWidth="120.0" styleClass="logout-button" text="Kirjaudu ulos" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="14.0" />
-        <Button fx:id="TakaisinButton" contentDisplay="RIGHT" layoutX="20.0" layoutY="14.0" mnemonicParsing="false" onAction="#navigateBackwards" prefHeight="25.0" prefWidth="90.0" styleClass="back-button" text="Takaisin" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="14.0">
-            <font>
-                <Font size="17.0" />
-            </font>
-        </Button>
-      <ListView layoutX="22.0" layoutY="228.0" prefHeight="329.0" prefWidth="974.0" styleClass="Lista-ikkuna"/>
-      <Label layoutX="383.0" layoutY="135.0" />
-      <HBox layoutX="22.0" layoutY="170.0" prefHeight="30.0" prefWidth="450.0" spacing="25.0">
-         <children>
-            <Button fx:id="TodayButton" mnemonicParsing="false" onAction="#filterByToday" prefHeight="25.0" prefWidth="90.0" text="Tänään" styleClass="Today-Button">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Button>
-            <Button fx:id="WeeklyButton" mnemonicParsing="false" onAction="#filterByWeekly" prefHeight="25.0" prefWidth="90.0" text="Viikko" styleClass="Week-Button">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Button>
-            <Button fx:id="MonthlyButton" mnemonicParsing="false" onAction="#filterByMonth" prefHeight="25.0" prefWidth="90.0" text="Kuukausi" styleClass="Month-Button">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Button>
-            <Button fx:id="AllEvents" mnemonicParsing="false" onAction="#getAllEvents" prefHeight="25.0" prefWidth="90.0" text="Kaikki" styleClass="All-Button">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Button>
-         </children>
-      </HBox>
-    </children>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" stylesheets="@StudentInfoStyles.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.KalenteriController">
+   <children>
+      <Text layoutX="450.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kalenteri" textAlignment="CENTER" textOrigin="CENTER">
+         <font>
+            <Font size="27.0" />
+         </font>
+      </Text>
+      <Button fx:id="ProfiiliButton" contentDisplay="RIGHT" layoutX="680.0" layoutY="14.0" mnemonicParsing="false" onAction="#openProfiiliPage" prefHeight="25.0" prefWidth="90.0" styleClass="profiili-button" text="Profiili" AnchorPane.rightAnchor="152.0" AnchorPane.topAnchor="14.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Line endX="913.0" layoutX="105.0" layoutY="73.0" startX="-105.0" />
+      <Button fx:id="LogOutButton" contentDisplay="RIGHT" layoutX="905.0" layoutY="14.0" mnemonicParsing="false" onAction="#CloseProgram" prefHeight="25.0" prefWidth="120.0" styleClass="logout-button" text="Kirjaudu ulos" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="14.0" />
+      <Text layoutX="40.0" layoutY="141.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="info-label-title" text="Kurssin tiedot">
+         <font>
+            <Font name="System Bold" size="19.0" />
+         </font>
+      </Text>
 
+      <TextField fx:id="SearchTextField" layoutX="480.0" layoutY="110.0" prefHeight="22.0" prefWidth="200.0" promptText="Hae kurssia" styleClass="search-text" />
+      <Button fx:id="CoursePageSearchButton" layoutX="700.0" layoutY="110.0" mnemonicParsing="false" onAction="#searchCourse" prefHeight="22.0" prefWidth="55.0" styleClass="search-button" text="Hae" />
+      <Button fx:id="TakaisinButton" contentDisplay="RIGHT" layoutX="20.0" layoutY="14.0" mnemonicParsing="false" onAction="#navigateBackwards" prefHeight="25.0" prefWidth="90.0" styleClass="back-button" text="Takaisin" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="14.0">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </Button>
+      <Pane layoutX="65.0" layoutY="178.0" prefHeight="303.0" prefWidth="239.0" styleClass="info-window" />
+      <DatePicker layoutX="283.0" layoutY="123.0" />
+      <TableView layoutX="330.0" layoutY="178.0" prefHeight="303.0" prefWidth="610.0" styleClass="info-window">
+        <columns>
+            <TableColumn prefWidth="75.0" text="Ma" />
+          <TableColumn prefWidth="75.0" text="Ti" />
+          <TableColumn prefWidth="75.0" text="Ke" />
+            <TableColumn prefWidth="75.0" text="To" />
+            <TableColumn prefWidth="75.0" text="Pe" />
+            <TableColumn prefWidth="75.0" text="La" />
+            <TableColumn prefWidth="75.0" text="Su" />
+        </columns>
+      </TableView>
+   </children>
 </AnchorPane>
