--- a/src/main/resources/kurssit.fxml
+++ b/src/main/resources/kurssit.fxml
@@ -13,6 +13,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TableColumn?>
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" stylesheets="@StudentInfoStyles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.KurssitController">
    <children>
       <Text layoutX="450.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Kurssit" textAlignment="CENTER" textOrigin="CENTER">
@@ -32,7 +34,12 @@
             <Font name="System Bold" size="19.0" />
          </font>
       </Text>
-      <ListView fx:id="CourseListView" layoutX="480.0" layoutY="178.0" prefHeight="303.0" prefWidth="459.0" styleClass="list-view" />
+      <TableView fx:id="CourseTableView" layoutX="480.0" layoutY="178.0" prefHeight="303.0" prefWidth="459.0" styleClass="table-view">
+         <columns>
+            <TableColumn fx:id="courseNameColumn" text="Kurssin nimi" />
+            <TableColumn fx:id="courseInstructorColumn" text="Tietoa" />
+         </columns>
+      </TableView>
 
       <GridPane hgap="10" layoutX="40.0" layoutY="170.0" prefHeight="318.0" prefWidth="400.0" styleClass="info-window" vgap="10">
          <columnConstraints>
@@ -78,7 +85,6 @@
       </GridPane>
 
       <TextField fx:id="SearchTextField" layoutX="480.0" layoutY="110.0" prefHeight="22.0" prefWidth="200.0" promptText="Hae kurssia" styleClass="search-text" />
-      <Button fx:id="CoursePageSearchButton" layoutX="700.0" layoutY="110.0" mnemonicParsing="false" onAction="#searchCourse" prefHeight="22.0" prefWidth="55.0" styleClass="search-button" text="Hae" />
       <Button fx:id="TakaisinButton" contentDisplay="RIGHT" layoutX="20.0" layoutY="14.0" mnemonicParsing="false" onAction="#navigateBackwards" prefHeight="25.0" prefWidth="90.0" styleClass="back-button" text="Takaisin" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="14.0">
          <font>
             <Font size="17.0" />
